kubernetes/istio/split-traffic/destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: istio-server-example
spec:
  host: istio-server-example
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
