kubernetes/istio/split-traffic/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: example-server-ingress
spec:
  hosts:
  - "example-ingress.com"
  gateways:
  - example-gateway
  http:
  - match:
      - headers:
          x-circle-id:
            exact: "v1"
        uri:
          prefix: /server
    rewrite:
      uri: "/"  
    route:
    - destination:
        host: istio-server-example
        subset: v1
  - match:
      - headers:
          x-circle-id:
            exact: "v2"
        uri:
          prefix: /server
    rewrite:
      uri: "/"  
    route:
    - destination:
        host: istio-server-example
        subset: v2
  - match:
      - uri:
          prefix: /server 
    rewrite:
      uri: "/"  
    route:
      - destination:
          host: istio-server-example
          subset: v2
